Fjernet fil og rettet lidt til

--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -24,12 +24,11 @@
     "from Prepare_Data import load_and_filter_market_returns\n",
     "import data_run_files\n",
     "import os\n",
-    "#autoreload download #pip install ipython\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "#file_path_id_test=\"./data_test/top_5_percent_ids.csv\"\n",
-    "# Sti til usa_dsf.parquet\n",
+    "\n",
     "file_path_usa_dsf = \"./Data/usa_dsf.parquet\"\n",
     "file_path_usa = \"./Data/usa.parquet\"\n",
     "file_path_market_returns = \"./Data/market_returns.csv\"\n",
@@ -186,8 +185,7 @@
     "print(df_usa_filtered.head())\n",
     "print(f\"Antal observationer efter filtrering: {len(df_usa_filtered)}\")\n",
     "\n",
-    "# Valider at filtreringen virker\n",
-    "print(df_usa_filtered['eom'].min())  # Skal vise en dato >= start_date"
+    "print(df_usa_filtered['eom'].min())  "
    ]
   },
   {
@@ -197,19 +195,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Beregn median market equity for hver virksomhed\n",
+    "\n",
     "company_median_equity = df_usa_filtered.groupby('id')['market_equity'].median()\n",
     "\n",
-    "# Find 95. percentilen for virksomheders median market equity\n",
     "threshold = company_median_equity.quantile(thres)\n",
     "\n",
-    "# Udvælg top 5% af virksomhederne (dem med median market equity >= threshold)\n",
     "top_thres_ids = company_median_equity[company_median_equity >= threshold].index\n",
     "\n",
-    "# Filtrer df_usa_filtered, så det kun indeholder disse virksomheder\n",
     "df_thres_ids = df_usa_filtered[df_usa_filtered['id'].isin(top_thres_ids)]\n",
     "\n",
-    "# Udskriv information\n",
     "print(f\"Grænseværdi for top 15% virksomheder: {threshold}\")\n",
     "print(f\"Antal unikke virksomheder i top 15%: {len(top_thres_ids)}\")"
    ]
@@ -250,17 +244,17 @@
    "outputs": [],
    "source": [
     "# Find første og sidste dato i dataset\n",
-    "#first_date = df_thres_ids['eom'].min()\n",
-    "#first_date2 = pd.to_datetime('2000-12-31')\n",
-    "#print(first_date2)\n",
-    "#last_date = df_thres_ids['eom'].max()\n",
-    "#print(last_date)\n",
+    "first_date = df_thres_ids['eom'].min()\n",
+    "first_date2 = pd.to_datetime('2000-12-31')\n",
+    "print(first_date2)\n",
+    "last_date = df_thres_ids['eom'].max()\n",
+    "print(last_date)\n",
     "# Filtrer virksomheder, der har data på både første og sidste dato\n",
-    "#df_thres_ids = df_thres_ids.groupby('id').filter(\n",
-    "#    lambda x: (first_date2 in x['eom'].values) and (last_date in x['eom'].values)\n",
-    "#)\n",
+    "df_thres_ids = df_thres_ids.groupby('id').filter(\n",
+    "    lambda x: (first_date2 in x['eom'].values) and (last_date in x['eom'].values)\n",
+    ")\n",
     "# Udskriv antal unikke virksomheder efter filtrering\n",
-    "#print(f\"Antal unikke virksomheder med data på både første og sidste dato: {df_thres_ids['id'].nunique()}\")"
+    "print(f\"Antal unikke virksomheder med data på både første og sidste dato: {df_thres_ids['id'].nunique()}\")"
    ]
   },
   {
