--- a/Bindende_bibetingelse_illustration.ipynb
+++ b/Bindende_bibetingelse_illustration.ipynb
@@ -194,63 +194,52 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Parameter for cirklens radius\n",
     "delta = 1.0\n",
     "\n",
-    "# Opret et grid af vinkler til at tegne en cirkel\n",
     "theta = np.linspace(0, 2*np.pi, 200)\n",
     "circle_x = delta * np.cos(theta)\n",
     "circle_y = delta * np.sin(theta)\n",
     "\n",
-    "# Antag, at den optimale portefølje (pi_opt) er i (0, 0)\n",
     "pi_opt = np.array([0.0, 0.0])\n",
     "\n",
-    "# Placér cirklens centrum ved pi_opt\n",
     "circle_center_x = pi_opt[0]\n",
     "circle_center_y = pi_opt[1]\n",
     "\n",
-    "# Flyt cirklens koordinater til (pi_opt)\n",
+    "\n",
     "circle_x += circle_center_x\n",
     "circle_y += circle_center_y\n",
     "\n",
-    "# Eksempel: Tidligere portefølje ganget med g_t\n",
-    "# (Her vælger vi bare et eksempelpunkt til illustration)\n",
+    "\n",
     "g_pi_prev = np.array([-0.5, 1.2])\n",
     "\n",
-    "# Eksempel: Den faktiske løsning på randen\n",
-    "# (Igen bare et eksempel)\n",
+    "\n",
     "pi_t = np.array([0.6, 0.8])\n",
     "\n",
-    "# Nu tegner vi det hele\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.axhline(0, color='grey', linewidth=1)\n",
     "plt.axvline(0, color='grey', linewidth=1)\n",
     "\n",
-    "# Tegn cirklen (afvigelsesgrænsen)\n",
+    "\n",
     "plt.plot(circle_x, circle_y, 'b--', label=r'$\\|\\boldsymbol{\\pi}_t - \\boldsymbol{\\pi}_t^{\\mathrm{opt}}\\|_{2} = \\delta$')\n",
     "\n",
-    "# Plot punkterne\n",
+    "\n",
     "plt.scatter(pi_opt[0], pi_opt[1], color='red', label=r'$\\boldsymbol{\\pi}_t^{\\mathrm{opt}}$')\n",
     "plt.scatter(g_pi_prev[0], g_pi_prev[1], color='green', label=r'$\\boldsymbol{g}_t \\boldsymbol{\\pi}_{t-1}$')\n",
     "plt.scatter(pi_t[0], pi_t[1], color='orange', label=r'$\\boldsymbol{\\pi}_t$ (løsning)')\n",
     "\n",
-    "# For overskuelighed kan vi annotere punkter\n",
     "plt.text(pi_opt[0] + 0.05, pi_opt[1], r'$\\pi_t^{\\mathrm{opt}}$', color='red')\n",
     "plt.text(g_pi_prev[0] + 0.05, g_pi_prev[1], r'$\\boldsymbol{g}_t \\boldsymbol{\\pi}_{t-1}$', color='green')\n",
     "plt.text(pi_t[0] + 0.05, pi_t[1], r'$\\boldsymbol{\\pi}_t$', color='orange')\n",
     "\n",
-    "# Aksetilpasning og titel\n",
     "plt.title('Illustration af bindende bibetingelse')\n",
     "plt.xlabel(r'$\\boldsymbol{\\pi}_1$')\n",
     "plt.ylabel(r'$\\boldsymbol{\\pi}_2$')\n",
     "plt.gca().set_aspect('equal', adjustable='box')\n",
-    "#plt.legend()\n",
     "plt.legend(\n",
-    "    loc='lower left',            # placér i nederste venstre hjørne\n",
-    "    bbox_to_anchor=(0.0, 0.0),   # finjustér selve boksen i forhold til hjørnet\n",
-    "    prop={'size': 8},            # gør fonten mindre\n",
-    "    frameon=True,                # evt. True/False for at vise/fjerne ramme\n",
-    "    #title='Min lille legend'     # du kan også give legend-boksen en titel\n",
+    "    loc='lower left',            \n",
+    "    bbox_to_anchor=(0.0, 0.0),   \n",
+    "    prop={'size': 8},            \n",
+    "    frameon=True,               \n",
     ")\n",
     "plt.grid(True)\n",
     "plt.savefig(os.path.join(output_folder, \"Bindende_bibetingelse.png\"), dpi=300, bbox_inches='tight')\n",
@@ -275,56 +264,46 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "\n",
-    "# Parameter for cirklens radius\n",
     "delta = 1.0\n",
     "\n",
-    "# Opret et grid af vinkler til at tegne en cirkel\n",
     "theta = np.linspace(0, 2*np.pi, 200)\n",
     "circle_x = delta * np.cos(theta)\n",
     "circle_y = delta * np.sin(theta)\n",
     "\n",
-    "# Antag, at den optimale portefølje (pi_opt) er i (0, 0)\n",
     "pi_opt = np.array([0.0, 0.0])\n",
     "\n",
-    "# Flyt cirklens koordinater til (pi_opt)\n",
     "circle_x += pi_opt[0]\n",
     "circle_y += pi_opt[1]\n",
     "\n",
-    "# Eksempel: Tidligere portefølje ganget med g_t\n",
     "g_pi_prev = np.array([-0.5, 1.2])\n",
     "\n",
-    "# Beregn projektionen på cirklen\n",
+    "\n",
     "direction = g_pi_prev - pi_opt\n",
     "norm_dir = np.linalg.norm(direction)\n",
     "if norm_dir == 0:\n",
-    "    unit_dir = np.array([1.0, 0.0])  # tilfældig retning hvis norm=0\n",
+    "    unit_dir = np.array([1.0, 0.0])  \n",
     "else:\n",
     "    unit_dir = direction / norm_dir\n",
     "pi_t = pi_opt + delta * unit_dir\n",
     "\n",
-    "# Nu tegner vi det hele\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.axhline(0, color='grey', linewidth=1)\n",
     "plt.axvline(0, color='grey', linewidth=1)\n",
     "\n",
-    "# Tegn cirklen (afvigelsesgrænsen)\n",
+    "\n",
     "plt.plot(circle_x, circle_y, 'b--', label=r'$\\|\\boldsymbol{\\pi}_t - \\boldsymbol{\\pi}_t^{\\mathrm{opt}}\\|_{2} = \\delta$')\n",
     "\n",
-    "# Plot punkterne\n",
+    "\n",
     "plt.scatter(*pi_opt, color='red',   label=r'$\\boldsymbol{\\pi}_t^{\\mathrm{opt}}$')\n",
     "plt.scatter(*g_pi_prev, color='green', label=r'$\\boldsymbol{g}_t \\boldsymbol{\\pi}_{t-1}$')\n",
     "plt.scatter(*pi_t,      color='orange', label=r'$\\boldsymbol{\\pi}_t$ (projektion)')\n",
     "\n",
-    "# Annoter punkter\n",
+    "\n",
     "plt.text(pi_opt[0]  + 0.05, pi_opt[1],  r'$\\pi_t^{\\mathrm{opt}}$',         color='red')\n",
     "plt.text(g_pi_prev[0]+ 0.05, g_pi_prev[1], r'$\\boldsymbol{g}_t \\boldsymbol{\\pi}_{t-1}$', color='green')\n",
     "plt.text(pi_t[0]     + 0.05, pi_t[1],     r'$\\boldsymbol{\\pi}_t$ (projektion)',    color='orange')\n",
     "\n",
-    "# Aksetilpasning og titel\n",
+    "\n",
     "plt.title('Illustration af bindende bibetingelse')\n",
     "plt.xlabel(r'$\\pi_1$')\n",
     "plt.ylabel(r'$\\pi_2$')\n",
@@ -332,7 +311,6 @@
     "plt.legend(loc='lower left', bbox_to_anchor=(0.0,0.0), prop={'size':8}, frameon=True)\n",
     "plt.grid(True)\n",
     "\n",
-    "output_folder = '.'  # eller dit ønskede output-folder\n",
     "plt.savefig(os.path.join(output_folder, \"Bindende_bibetingelse.png\"), dpi=300, bbox_inches='tight')\n",
     "plt.show()\n"
    ]
@@ -355,10 +333,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "\n",
     "delta = 1.0\n",
     "theta = np.linspace(0, 2*np.pi, 200)\n",
     "circle_x = delta * np.cos(theta)\n",
@@ -369,7 +343,6 @@
     "\n",
     "g_pi_prev = np.array([-0.5, 1.2])\n",
     "\n",
-    "# Projektion på cirklen\n",
     "direction = g_pi_prev - pi_opt\n",
     "norm_dir = np.linalg.norm(direction)\n",
     "unit_dir = direction/norm_dir if norm_dir>0 else np.array([1.0,0.0])\n",
@@ -383,7 +356,6 @@
     "plt.scatter(*g_pi_prev,   color='green',  label=r'$\\boldsymbol{g}_t \\pi_{t-1}$')\n",
     "plt.scatter(*pi_t,        color='orange', label=r'$\\pi_t$ (projektion)')\n",
     "\n",
-    "# Stiplet linje gennem alle tre\n",
     "points = np.vstack([pi_opt, g_pi_prev, pi_t])\n",
     "t_vals  = np.dot(points - pi_opt, unit_dir)\n",
     "t_min, t_max = t_vals.min(), t_vals.max()\n",
@@ -421,52 +393,42 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "\n",
-    "# Parameter for cirklens radius\n",
     "delta = 1.0\n",
     "\n",
-    "# Opret et grid af vinkler til at tegne en cirkel\n",
     "theta = np.linspace(0, 2*np.pi, 200)\n",
     "circle_x = delta * np.cos(theta)\n",
     "circle_y = delta * np.sin(theta)\n",
     "\n",
-    "# Antag, at den optimale portefølje (pi_opt) er i (0, 0)\n",
     "pi_opt = np.array([0.0, 0.0])\n",
     "\n",
-    "# Flyt cirklens koordinater til (pi_opt)\n",
     "circle_x += pi_opt[0]\n",
     "circle_y += pi_opt[1]\n",
     "\n",
-    "# Eksempel: Tidligere portefølje ganget med g_t\n",
     "g_pi_prev = np.array([-0.5, 1.2])\n",
     "\n",
-    "# Beregn projektionen af g_pi_prev på cirklen omkring pi_opt\n",
     "direction = g_pi_prev - pi_opt\n",
     "norm_dir  = np.linalg.norm(direction)\n",
     "if norm_dir == 0:\n",
-    "    unit_dir = np.array([1.0, 0.0])  # tilfældig retning hvis punktet er i midten\n",
+    "    unit_dir = np.array([1.0, 0.0])  \n",
     "else:\n",
     "    unit_dir = direction / norm_dir\n",
     "pi_t = pi_opt + delta * unit_dir\n",
     "\n",
-    "# Plot setup\n",
+    "\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.axhline(0, color='grey', linewidth=1)\n",
     "plt.axvline(0, color='grey', linewidth=1)\n",
     "\n",
-    "# Tegn cirklen (afvigelsesgrænsen)\n",
+    "\n",
     "plt.plot(circle_x, circle_y, 'b--',\n",
     "         label=r'$\\|\\boldsymbol{\\pi}_t - \\boldsymbol{\\pi}_t^{\\mathrm{opt}}\\|_{2} = \\delta$')\n",
     "\n",
-    "# Plot punkterne\n",
+    "\n",
     "plt.scatter(*pi_opt,      color='red',    label=r'$\\boldsymbol{\\pi}_t^{\\mathrm{opt}}$')\n",
     "plt.scatter(*g_pi_prev,   color='green',  label=r'$\\boldsymbol{g}_t\\,\\boldsymbol{\\pi}_{t-1}$')\n",
     "plt.scatter(*pi_t,        color='orange', label=r'$\\boldsymbol{\\pi}_t$ (projektion)')\n",
     "\n",
-    "# Annoter punkterne\n",
+    "\n",
     "plt.text(pi_opt[0]  + 0.05, pi_opt[1]  + 0.02,\n",
     "         r'$\\boldsymbol{\\pi}_t^{\\mathrm{opt}}$', color='red')\n",
     "plt.text(g_pi_prev[0] + 0.05, g_pi_prev[1] + 0.00,\n",
@@ -474,16 +436,16 @@
     "plt.text(pi_t[0]     + 0.05, pi_t[1]     - 0.02,\n",
     "         r'$\\boldsymbol{\\pi}_t$ (projektion)', color='orange')\n",
     "\n",
-    "# Tegn stiplede linje gennem alle tre punkter\n",
+    "\n",
     "points = np.vstack([pi_opt, g_pi_prev, pi_t])\n",
     "t_vals = np.dot(points - pi_opt, unit_dir)\n",
     "t_min, t_max = t_vals.min(), t_vals.max()\n",
     "t_line = np.linspace(t_min, t_max, 100)\n",
     "line_x = pi_opt[0] + t_line * unit_dir[0]\n",
     "line_y = pi_opt[1] + t_line * unit_dir[1]\n",
-    "#plt.plot(line_x, line_y, 'k--', linewidth=1, label='Ret gennem porteføljer')\n",
+    "\n",
     "plt.plot(line_x, line_y, 'k--', linewidth=1)\n",
-    "# Finpudsning\n",
+    "\n",
     "plt.title('Illustration af bindende bibetingelse')\n",
     "plt.xlabel(r'$\\boldsymbol{\\pi}_1$')\n",
     "plt.ylabel(r'$\\boldsymbol{\\pi}_2$')\n",
@@ -492,19 +454,11 @@
     "           prop={'size':8}, frameon=True)\n",
     "plt.grid(True)\n",
     "\n",
-    "# Gem og vis\n",
+    "\n",
     "plt.savefig(os.path.join(output_folder, \"Bindende_bibetingelse.png\"),\n",
     "            dpi=300, bbox_inches='tight')\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab408be0-b939-4c3e-9fe4-412a637de7a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
